--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,2 +1,3 @@
   <li>{{question.user}}- {{question.content}}</li>
+  {{update-question question=question update='update'}}
   <button {{action 'delete' question}}>Delete question</button>
