--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -1,1 +1,23 @@
-{{yield}}
+{{#if updateQuestionForm}}
+ <h4>Update </h4>
+ <div>
+   <form>
+     <div class="form-group">
+       <label for="user">user</label>
+       {{input value=user id='user' placeholder=question.user}}
+
+     </div>
+
+     <div class="form-group">
+       <label for="content">content</label>
+       {{input value=content id='content' placeholder=question.content}}
+
+     </div>
+
+     <button{{action 'update' question}}>save</button>
+   </form>
+
+ </div>
+ {{else}}
+ <button {{action 'updateQuestionForm'}}>update</button>
+{{/if}}
