add dynamic routing of questions

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,5 @@
-{{outlet}}
+More information
+
+
+{{question-detail question=model destroyQuestion='destroyQuestion'}}
+{{update-question question=model update='update'}}
