--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,18 @@
 <ul>
-  {{#each model as |question|}}
+  {{#each model.questions as |question|}}
   {{question-tile question=question}}
 
   {{/each}}
 </ul>
 
 {{new-question saveQuestion2="saveQuestion3"}}
+
+
+
+<h3>Responses</h3>
+
+<ul>
+  {{#each model.responses as |response|}}
+  <li>{{response.author}} - {{response.answer}}</li>
+  {{/each}}
+</ul>
