--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -19,5 +19,5 @@
 
  </div>
  {{else}}
- <button {{action 'updateQuestionForm'}}>update</button>
+ <button {{action 'updateQuestionForm'}}>update question</button>
 {{/if}}
