--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,5 +1,6 @@
-More information
+Question
 
 
-{{question-detail question=model destroyQuestion='destroyQuestion'}}
+{{question-detail question=model destroyResponse='destroyResponse' destroyQuestion='destroyQuestion'}}
 {{update-question question=model update='update'}}
+{{new-response saveResponse='saveResponse' question=model}}
